--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "motion": "^11.15.0",
+    "next": "^14.2.20",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
